fix bug 10255. Hide overflow to fix RTL issues /ar/firefox/developer/ at small viewport sizes

--- a/media/css/firefox/developer/includes/intro.scss
+++ b/media/css/firefox/developer/includes/intro.scss
@@ -43,6 +43,7 @@
     background-size: auto 420px;
     height: 420px;
     position: relative;
+    overflow: hidden;
 
     img {
         bottom: 0;
